--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 
       <div class="player">
         <!-- Dashboard -->
-        <div class="dashboard">
+        <div class="dashboard non-active">
+          <i class="fas fa-list playlist-btn"></i>
           <!-- Header -->
           <header>
             <h4>Now playing:</h4>
@@ -71,7 +72,7 @@
         </div>
 
         <!-- Playlist -->
-        <div class="playlist"></div>
+        <div class="playlist non-active"></div>
       </div>
     </div>
 
