--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Music player</title>
-    <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
@@ -15,14 +15,14 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./assets/css/main.css" />
-    <link rel="stylesheet" href="./assets/css/mobile.css" />
-    <link rel="stylesheet" href="./assets/css/tablet.css" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/mobile.css" />
+    <link rel="stylesheet" href="assets/css/tablet.css" />
   </head>
   <body>
     <div class="background-video">
       <video id="video" muted loop>
-        <source src="./assets/video/background-video.webm" type="video/webm" />
+        <source src="assets/video/background-video.webm" type="video/webm" />
       </video>
 
       <div class="player">
@@ -99,6 +99,6 @@
       </div>
     </div>
 
-    <script src="./index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
