--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Music player</title>
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+    <script
+      src="https://code.jquery.com/jquery-3.6.3.js"
+      integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM="
+      crossorigin="anonymous"
+    ></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
@@ -20,6 +25,10 @@
     <link rel="stylesheet" href="assets/css/tablet.css" />
   </head>
   <body>
+    <div class="preloader">
+      <span class="loader"><span class="loader-inner"></span></span>
+    </div>
+
     <div class="background-video">
       <video id="video" muted loop>
         <source src="assets/video/background-video.webm" type="video/webm" />
@@ -99,6 +108,12 @@
       </div>
     </div>
 
+    <script>
+      const preloader = document.querySelector(".preloader");
+      window.onload = () => {
+        preloader.classList.toggle("fade-out");
+      };
+    </script>
     <script src="index.js"></script>
   </body>
 </html>
