--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@
         <div class="bar bar8"></div>
         <div class="bar bar9"></div>
         <div class="bar bar10"></div>
+        <div class="bar bar11"></div>
+        <div class="bar bar12"></div>
+        <div class="bar bar13"></div>
+        <div class="bar bar14"></div>
+        <div class="bar bar15"></div>
+        <div class="bar bar16"></div>
+        <div class="bar bar17"></div>
+        <div class="bar bar18"></div>
+        <div class="bar bar19"></div>
+        <div class="bar bar20"></div>
       </div>
     </div>
 
