--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <div class="playlist-btn"><i class="fas fa-list"></i></div>
           <div class="tip-btn">
             <span class="tip-text"
-              ><b>Useless tip:</b> Enter fullscreen (F11)</span
+              ><b>Useless tip:</b> Try it out on mobile devices</span
             >
             <i class="far fa-question-circle"></i>
           </div>
